Tried to fix custom cursor not showing up properly in github pages deployment.

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ input[type="text"] {
   background-color: #1a1a2e;
   border: 1px solid #444;
   padding: 8px;
-  cursor: url("/click.png"), auto;
+  cursor: url("./click.png"), auto;
 }
 
 input[type="color"] {
@@ -37,7 +37,7 @@ input[type="color"] {
   border-radius: 50%; 
   border: 3px solid #4932c9; 
   padding: 0;
-  cursor: url("/click.png"), auto;
+  cursor: url("./click.png"), auto;
   background-color: transparent;
   margin-right: 8px
 }
@@ -52,7 +52,7 @@ input[type="color"]::-webkit-color-swatch {
 body {
    margin:0;
    padding: 0;
-   cursor: url("/cursor.png"), auto;
+   cursor: url("./cursor.png"), auto;
 
   color: var(#4932c9);
   image-rendering: pixelated;
@@ -128,7 +128,7 @@ h1 {
     border-radius: 8px;
     appearance: none;
    background: linear-gradient(to right, #4D23CF 0% , white 100%);
-   cursor: url("/click.png"), auto;
+   cursor: url("./click.png"), auto;
    }
 
 #vol_slider::-webkit-slider-thumb {
@@ -220,7 +220,7 @@ h1 {
 }
 
 .button:hover {
-   cursor: url("/click.png"), auto;
+   cursor: url("./click.png"), auto;
    border-image: url(button_hovered.png) 4 fill repeat;
 }
 
